<resources>
    <string name="app_name">HAMLET Student Organiser</string>
    <string name="action_settings">Settings</string>
    <string name="action_logout">Logout</string>
    <string name="settings_activity_title">Settings</string>
    <string name="action_refresh">Refresh</string>
    <string name="prefs_server_settings_header">Server Settings</string>
    <string name="prefs_server_url_title">Server URL</string>
    <string name="prefs_server_url_summary">The URL used for connecting to HAMLET servers.</string>
    <string name="error_code">Error code: </string>
    <string name="login_failed_title">Login Failed</string>
    <string name="username_password_not_entered">Please enter both a Username and a Password</string>
    <string name="neutral_dialog_button">OK</string>
    <string name="could_not_connect_to_server">"Could not connect to server."</string>
    <string name="server_returned_no_data">Server returned no data.</string>
    <string name="server_returned_unexpected_data">Server returned unexpected data.</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="signing_in">Signing in</string>
    <string name="navigation_item_dashboard">Dashboard</string>
    <string name="navigation_item_notebook">Notebook</string>
    <string name="navigation_item_timetable">Timetable</string>
    <string name="navigation_item_tasks">Tasks</string>
    <string name="navigation_item_settings">Settings</string>
    <string name="navigation_item_notifications">Notifications</string>
    <string name="navigation_item_logout">Logout</string>
    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>
    <string name="reload_page_button">Retry</string>
    <string name="generic_error_desc">Something went wrong&#8230;</string>
    <string name="search">Search</string>
    <string name="search_hint">Search notes &amp; tasks</string>
    <string name="search_results_notes_header">Notes</string>
    <string name="search_results_tasks_header">Tasks</string>
    <string name="search_info_default">Search for a note or task</string>
    <string name="search_info_no_results">No results to display</string>
    <string name="search_info_error_client">Something went wrong. Check your internet connection.</string>
    <string name="search_info_error_server">There was an error processing your request.</string>
</resources>
