<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single"
        android:id="@+id/navigation_items_1">

        <item
            android:id="@+id/nav_item_dashboard"
            android:icon="@drawable/ic_dashboard_grey_24dp"
            android:checked="false"
            android:title="@string/navigation_item_dashboard" />

        <item
            android:id="@+id/nav_item_notebook"
            android:icon="@drawable/ic_book_grey_24dp"
            android:checked="false"
            android:title="@string/navigation_item_notebook" />

        <item
            android:id="@+id/nav_item_timetable"
            android:icon="@drawable/ic_event_grey_24dp"
            android:checked="false"
            android:title="@string/navigation_item_timetable" />

        <item
            android:id="@+id/nav_item_tasks"
            android:icon="@drawable/ic_check_box_grey_24dp"
            android:checked="false"
            android:title="@string/navigation_item_tasks" />

        <item
            android:id="@+id/nav_item_settings"
            android:icon="@drawable/ic_settings_grey_24dp"
            android:checked="false"
            android:title="@string/navigation_item_settings" />
        <item
            android:id="@+id/nav_item_notifications"
            android:icon="@drawable/ic_notifications_grey_24dp"
            android:checked="false"
            android:title="@string/navigation_item_notifications" />

    </group>

    <group android:id="@+id/navigation_items_2">
        <item
            android:id="@+id/nav_item_logout"
            android:checked="false"
            android:title="@string/navigation_item_logout" />
        </group>
</menu>