<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="20dp"
    tools:context=".LoginActivity"
    android:orientation="vertical">

    <EditText
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:hint="@string/username"
        android:inputType="textEmailAddress"
        android:id="@+id/activity_login_username_editText">
    </EditText>

    <EditText
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:id="@+id/activity_login_password_editText">
    </EditText>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:layout_gravity="end"
        android:id="@+id/activity_login_login_button" />

</LinearLayout>